fav icon and title change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://talmoe.io/talmoe-react-app/",
+  "homepage": "https://talmoe.com/",
 
   "name": "talmoe-react-app",
   "version": "0.1.0",
