--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.14",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "@babel/plugin-proposal-private-property-in-object":"7.21.11"
   }
 }
